test/unit-tests/errors/equal-match-error.spec.d.ts
export declare class EqualMatchErrorTests {
    shouldMatchMessage(actualValue: any, expectedValue: any): void;
    shouldNotMatchMessage(actualValue: any, expectedValue: any): void;
}
